--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
-    "node": "^21.1.0"
+    "node": "^21.1.0",
+    "uuid": "^9.0.1"
   }
 }
